# boot-efi

./: .editorconfig  .gitignore  COPYING  Makefile.am  README  autogen.sh  configure.ac  org.bus1.boot-efi.spec
src/: boot.c  disk.c  disk.h  graphics.h  linux.c  linux.h  splash.c  splash.h  stub.c  util.c  util.h
src/boot/: console.c  console.h  main.c
src/shared/: disk.c  graphics.c  pefile.c  pefile.h  util.c  util.h
src/stub/: linux.c  main.c  splash.c  splash.h
test/: create-efi-disk.sh  test-efi-create-disk.sh
